<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.loboevolution</groupId>
    <artifactId>LoboEvo</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <buildDirectory>../target/LoboEvo</buildDirectory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboCommon</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboStore</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboApi</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboParser</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboPDF</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboIViewer</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboJTattoo</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboHTML</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboJhrome</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.41.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.fifesoft</groupId>
            <artifactId>rsyntaxtextarea</artifactId>
            <version>3.3.4</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.6</version>
        </dependency>
    </dependencies>

    <build>
        <directory>${buildDirectory}</directory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
               <version>4.0.0-M12</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.5.0</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependencies</report>
                             <report>index</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>


</project>